# vit_reproduce

./: .gitignore  README.md  main.py  pyproject.toml
configs/: config.py
data/: dataset.py
models/: vit.py
trainer/: trainer.py
utils/: utils.py
