[project]
name = "vit-reproduce"
version = "0.1.0"
description = "Just for learning ViT."
authors = [
    {name = "mzhu"}
]
readme = "README.md"
requires-python = ">=3.9,<3.10"
dependencies = [
]
[tool.poetry]
packages = [
    { include = "configs" },
    { include = "data" },
    { include = "models" },
    { include = "trainer" },
    { include = "utils" },
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
